<resources>
    <string name="app_name">我的冻品3.0</string>
    <string name="mmm_captcha_login">短信验证码登录</string>
    <string name="mmm_password_login">密码登录</string>
    <string name="mmm_phone">手机号</string>
    <string name="mmm_captcha">验证码</string>
    <string name="mmm_get_captcha">获取验证码</string>
    <string name="mmm_login">登录</string>
    <string name="mmm_login_is_agree">登录即同意</string>
    <string name="mmm_user_protocol">《用户协议》</string>
    <string name="mmm_problem_in_login">登录中如遇到问题,</string>
    <string name="mmm_call_service">请拨打客服电话：</string>
    <string name="mmm_service_phone">400-0086-591</string>
    <string name="mmm_hint_please_input_phone">请输入手机号</string>
    <string name="mmm_hint_please_input_captcha">请输入验证码</string>
    <string name="mmm_password">密码</string>
    <string name="mmm_hint_please_input_password">请输入密码</string>
    <string name="mmm_retrieve_pwd">找回密码</string>
    <string name="mmm_use_password_login">用密码登录</string>
    <string name="mmm_switch_account">切换账号</string>

    <string name="mmm_chat">聊一聊</string>
    <string name="mmm_mymsg">我的消息</string>
    <string name="mmm_iwatch">我看过的</string>
    <string name="mmm_toolbox">工具箱</string>
    <string name="mmm_shoplist">商家列表</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="mmm_use_captcha_login">用短信验证码登录</string>
    <string name="mmm_personInfor">个人资料</string>
    <string name="mmm_identity">身份认证</string>
    <string name="mmm_setting">设置</string>
    <string name="mmm_myphone">1232323222</string>
    <string name="mmm_putongUser">普通用户</string>
    <string name="mmm_unconfirm">未认证</string>
    <string name="mmm_main_tab_shop">冻品商城</string>
    <string name="mmm_main_tab_news">今日资讯</string>
    <string name="mmm_main_tab_work">我的工作</string>

    <string name="mmm_open">打开</string>
    <string name="mmm_msg_default_status">将产品条形码、用户的二维码\\n放入框内,即可自动扫描</string>
    <string name="mmm_input_open_photo">打开相册</string>

    <string name="mmm_about_us">关于我们</string>
    <string name="mmm_account_security">账号/设备安全</string>
    <string name="mmm_push_message_set">推送消息设置</string>
    <string name="mmm_clear_cache">清除缓存</string>
    <string name="mmm_quit_login">退出登录</string>
    <string name="mmm_now_copy_right">当前版本V0.2.3</string>
    <string name="mmm_KB">90kB</string>
    <string name="mmm_close">关闭</string>
    <string name="mmm_head">头像</string>
    <string name="mmm_name">姓名</string>
    <string name="mmm_sex">性别</string>
    <string name="mmm_area">地区</string>
    <string name="mmm_address">地址</string>
    <string name="mmm_professio">职业</string>
    <string name="mmm_edit_infor">编辑资料</string>
    <string name="mmm_please_choose">请选择</string>
    <string name="mmm_please_input_address">请输入地址信息</string>
    <string name="mmm_please_choose_profession">请选择您的职业信息</string>
    <string name="mmm_register_phone">注册手机号</string>
    <string name="mmm_association">关联手机号</string>
    <string name="mmm_zds">张德帅</string>
    <string name="mmm_cancel">取消</string>
    <string name="mmm_confirm">确定</string>
    <string name="mmm_applicant">申请人资料</string>
    <string name="mmm_need_input_all">（需要全部填写）</string>
    <string name="mmm_applicant_name">申请人姓名</string>
    <string name="mmm_submit">提交</string>
    <string name="mmm_shop_name">店铺名称</string>
    <string name="mmm_shop_address">店铺地址</string>
    <string name="mmm_please_input_detail_address">请填写详细地址信息</string>
    <string name="mmm_please_input_shop_name">请输入店铺名称</string>
    <string name="mmm_talk">有话说</string>
    <string name="mmm_hint_please_input_search">请输入要查找的店铺或商品</string>
    <string name="mmm_product">产品</string>
    <string name="mmm_shop">店铺</string>
    <string name="mmm_search_history">搜索历史</string>
    <string name="mmm_clean_history">清空搜索历史</string>
    <string name="mmm_edit">编辑</string>
    <string name="mmm_bottomtab_function">首页底部栏功能</string>
    <string name="mmm_press_drag">(按住拖动调整顺序)</string>
    <string name="mmm_often_use">常用功能</string>
    <string name="mmm_mine_msg">我的消息</string>
    <string name="mmm_merchant_list">商家列表</string>
    <string name="mmm_user_protocol2">用户协议</string>
    <string name="mmm_copy_right">深圳买买买信息科技有限公司©版权所有</string>
    <string name="mmm_chat_detail">聊天详情</string>
    <string name="mmm_find_chat_content">查找聊天内容</string>
    <string name="mmm_chat_top">聊天置顶</string>
    <string name="mmm_off">已开</string>
    <string name="mmm_on">已关</string>
    <string name="mmm_clear_chat">清空聊天记录</string>
    <string name="mmm_no_bother">消息免打扰</string>
    <string name="mmm_wholesaler">批发商</string>
    <string name="mmm_manufacturer">生厂商</string>
    <string name="mmm_terminal">餐饮终端</string>
    <string name="mmm_secrecy">保密</string>
    <string name="mmm_hint_input_search_goods">请输入您要搜索的商品</string>
    <string name="mmm_private">隐私声明</string>
    <string name="mmm_official_service">官方客服电话</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mmm_edit_sex">修改性别</string>
    <string name="mmm_ok">确定</string>
    <string name="mmm_home_mall">冻品商城</string>
    <string name="mmm_attention_me">关注我的</string>
    <string name="mmm_unread">未读消息</string>
    <string name="mmm_shop_page_view">店铺浏览量</string>
    <string name="mmm_sotia_tofu">【苏天下】 豆腐</string>
    <string name="mmm_specification1">2500g/包x4</string>
    <string name="mmm_price_nego">价格面议</string>
    <string name="mmm_people_view">$人浏览</string>
    <string name="mmm_news1">麦肯锡：2030年，逾1亿中国人需要学习新技能并转换岗位，这就...</string>
    <string name="mmm_hint_title">【圈层】</string>
    <string name="mmm_number">1</string>
    <string name="mmm_by_identity_unlock">通过身份认证可使用该模块</string>
    <string name="mmm_begin_auth">开始认证</string>
    <string name="mmm_look_work_content"><u>提前看一看【我的工作】内容</u></string>
    <string name="mmm_click_to_auth">（点击按钮开始认证） </string>
    <string name="mmm_new2">卫龙：要营销也要娱乐，看一个“卖辣条的”花样活法！</string>
    <string name="mmm_hint_please_input_search_content">请输入您要搜索的内容</string>
    <string name="mmm_recently_chat">最近聊天</string>
    <string name="mmm_chat_list">聊天名单</string>
    <string name="mmm_im_network_error">网络暂时无法连接，请稍后重试</string>
    <string name="mmm_retrieve_password">找回密码</string>
    <string name="mmm_service1">客服1</string>
    <string name="mmm_send">发送</string>
    <string name="mmm_share">分享</string>
    <string name="mmm_dofu">【素天下】小豆腐</string>
    <string name="mmm_like">喜欢</string>
    <string name="mmm_page_view">浏览量：20</string>
    <string name="mmm_deliver_goods_address">发货地：福州市仓山区</string>
    <string name="mmm_produce_detail">产品详情</string>
    <string name="mmm_go_see_shop">进店逛逛</string>
    <string name="mmm_sort">分类</string>
    <string name="mmm_more">更多</string>
    <string name="mmm_input_keyword">请输入关键字</string>
    <string name="mmm_home">首页</string>
    <string name="mmm_mywork">我的工作</string>
    <string name="mmm_share_shop">分享店铺</string>
    <string name="mmm_product_sort">产品分类</string>
    <string name="mmm_all_product">全部产品</string>
    <string name="mmm_sale_product">促销产品</string>
    <string name="mmm_new_product_recommend">新品推荐</string>
    <string name="mmm_hot">热销产品</string>
    <string name="mmm_shop_name1">素天下</string>
    <string name="mmm_look_all">查看全部</string>
    <string name="mmm_frozen_vegetarian">冷冻素食类</string>
    <string name="mmm_sort2">切片豆腐类</string>
    <string name="mmm_sort1">条状豆腐类</string>
    <string name="mmm_sort3">豆腐丝类</string>
    <string name="mmm_sort4">豆腐丁</string>
    <string name="mmm_sort5">豆腐串类</string>
    <string name="mmm_sort6">米面串类</string>
</resources>
