<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        style="?attr/tts_bg"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:orientation="horizontal"
        android:background="@color/color_main">

        <ImageView
            android:id="@+id/ivBack"
            style="?attr/tts_title_leftImg"
            android:src="@drawable/back_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"/>

        <TextView
            style="?attr/tts_title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="@dimen/mmm_font_s10"
            android:gravity="center"
            android:text="@string/mmm_identity"
            android:textColor="@color/color_pure_white"
            android:textSize="@dimen/mmm_font_s16" />
    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@color/color_hint"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/mmm_font_s12"
        android:textSize="16dp"
        android:textColor="@color/color_textcolor"
        android:text="@string/mmm_applicant"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/color15"
            android:textSize="@dimen/mmm_font_s12"
            android:paddingTop="@dimen/mmm_font_s12"
            android:paddingBottom="@dimen/mmm_font_s12"
            android:text="@string/mmm_need_input_all"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/mmm_font_s15"
            android:text="@string/mmm_applicant_name"
            android:textColor="@color/color_textcolor"
            android:textSize="@dimen/mmm_font_s15" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="@dimen/mmm_font_s15"
            android:textSize="@dimen/mmm_font_s15"
            android:textColor="@color/color_textcolor"
            android:text="zds" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_height="0.6dp"
        android:background="@color/color_hint"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/mmm_font_s15"
            android:text="@string/mmm_phone"
            android:textColor="@color/color_textcolor"
            android:textSize="@dimen/mmm_font_s15" />

        <TextView
            android:id="@+id/tvPhoneNumber"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/mmm_font_s15"
            android:textSize="@dimen/mmm_font_s15"
            android:textColor="@color/color_textcolor"
            android:layout_weight="2"
            android:text="@string/mmm_myphone" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_height="0.6dp"
        android:background="@color/color_hint"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/mmm_font_s15"
            android:text="@string/mmm_shop_name"
            android:textColor="@color/color_textcolor"
            android:textSize="@dimen/mmm_font_s15" />

        <TextView
            android:id="@+id/tvShopName"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/mmm_font_s15"
            android:textSize="@dimen/mmm_font_s15"
            android:textColor="@color/color_textcolor"
            android:layout_weight="2"
            android:hint="@string/mmm_please_input_shop_name"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_height="0.6dp"
        android:background="@color/color_hint"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvShopAddress"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="@dimen/mmm_font_s15"
            android:text="@string/mmm_shop_address"
            android:textColor="@color/color_textcolor"
            android:textSize="@dimen/mmm_font_s15" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv11"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/personal_ic_site"
                android:padding="@dimen/mmm_font_s15"
                android:text="11"
                android:textColor="@color/color_textcolor"
                android:textSize="@dimen/mmm_font_s15" />

            <View
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_height="0.6dp"
                android:background="@color/color_hint"/>

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/mmm_please_input_detail_address"
                android:padding="@dimen/mmm_font_s12" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_height="0.6dp"
        android:background="@color/color_hint"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_gravity="bottom" >

    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/color_pure_white"
        android:textSize="@dimen/mmm_font_s16"
        android:background="@color/color_main"
        android:layout_gravity="bottom"
        android:text="@string/mmm_submit"/>
</LinearLayout>