<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/color_pure_white"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="350dp">

        <com.youth.banner.Banner
            android:id="@+id/banGoods"
            android:layout_width="match_parent"
            android:layout_height="350dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/back_2"
                    android:layout_marginLeft="@dimen/mmm_font_s10"
                    android:padding="10dp"
                    android:layout_marginTop="2dp">

                </ImageView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tvShare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mmm_share"
                    android:gravity="center"
                    android:background="@drawable/state_select_share_bg"
                    android:textColor="@color/color_main"
                    android:layout_marginRight="@dimen/mmm_font_s10"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>

        </com.youth.banner.Banner>
    </FrameLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mmm_dofu"
        android:textColor="@color/color_textcolor"
        android:textSize="18dp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/tvLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mmm_like"
        android:layout_margin="@dimen/mmm_font_s12"
        android:drawableTop="@drawable/tab_ic_like_nor"/>

</LinearLayout>

    <TextView
        android:id="@+id/tvGoodSpecification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/color_pure_white"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:textSize="@dimen/mmm_font_s16"
        android:paddingTop="@dimen/mmm_font_s10"
        android:paddingBottom="@dimen/mmm_font_s10"
        android:layout_marginLeft="@dimen/mmm_font_s10"
        android:background="@drawable/mmm_textbg_r10"
        android:text="@string/mmm_specification1"/>

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color15"
        android:layout_marginTop="12dp"
        android:textSize="@dimen/mmm_font_s10"
        android:layout_marginLeft="@dimen/mmm_font_s10"
        android:text="@string/mmm_price_nego"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mmm_font_s12"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mmm_font_s10"
            android:text="@string/mmm_deliver_goods_address"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tvPageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:text="@string/mmm_page_view"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/mmm_font_s12"
        android:layout_height="5dp"
        android:background="@color/color_cut_off_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:background="@color/color_pure_white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mmm_produce_detail"
            android:textColor="@color/color_textcolor"
            android:textSize="18dp"
            android:gravity="center"
            android:drawableRight="@drawable/line_right"
            android:drawableLeft="@drawable/line_left"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/color_background" />

    <LinearLayout
        android:id="@+id/llGotoShop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_main"
        android:gravity="center"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:src="@drawable/gotoshop"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mmm_go_see_shop"
            android:textSize="12dp"
            android:textColor="@color/color_pure_white"
            android:gravity="center"
            android:drawablePadding="5dp"/>

    </LinearLayout>

</LinearLayout>